[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/GGS.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/synthetic_laser(new).wav" type="AudioStream" id=5]
[ext_resource path="res://audio/boost_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Scripts/Trial.gd" type="Script" id=7]
[ext_resource path="res://player/force_field.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.0636363 ), 0.0, 0.0, 0, 0, Vector2( 0.471204, 0.518182 ), 0.0, 0.0, 0, 0, Vector2( 0.780105, 0.927273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=3]
radius = 66.017

[node name="Player" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
angular_damp = 10.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="Ship" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 30.8866, 0 )

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="DoubleTapTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TrailTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ForceFieldTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="BulletAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="BoostAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0

[node name="RightParticleEffect" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( -22.0486, 27.0883 )
gravity = Vector2( -90, 0 )
initial_velocity = 10.0
scale_amount = 2.0
color = Color( 0, 1, 1, 1 )

[node name="LeftParticleEffect" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( -23.5486, -24.4117 )
gravity = Vector2( -90, 0 )
initial_velocity = 10.0
scale_amount = 2.0
color = Color( 0, 1, 1, 1 )

[node name="RTrails" type="Node2D" parent="."]
position = Vector2( -24.4388, 26.2559 )

[node name="RightTrail" type="Line2D" parent="RTrails"]
points = PoolVector2Array( -18.7079, 26.557 )
width = 5.0
width_curve = SubResource( 2 )
default_color = Color( 0.00392157, 0.976471, 1, 1 )
script = ExtResource( 7 )

[node name="LTrails" type="Node2D" parent="."]
position = Vector2( -23.2673, -24.2426 )

[node name="LeftTrail" type="Line2D" parent="LTrails"]
points = PoolVector2Array( 3.22864, -53.0588 )
width = 5.0
width_curve = SubResource( 2 )
default_color = Color( 0.00392157, 0.976471, 1, 1 )
script = ExtResource( 7 )

[node name="ForceField" type="Area2D" parent="." groups=[
"forcefield",
]]
visible = false

[node name="Sprite" type="Sprite" parent="ForceField"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceField"]
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
[connection signal="timeout" from="DoubleTapTimer" to="." method="_on_DoubleTapTimer_timeout"]
[connection signal="timeout" from="TrailTimer" to="." method="_on_TrailTimer_timeout"]
[connection signal="timeout" from="ForceFieldTimer" to="." method="_on_ForceFieldTimer_timeout"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]

[editable path="Explosion"]
